# libhttpwebserver-interface

./: CMakeLists.txt  LICENSE.md  README.md
interfaces/: error.hpp  file.cpp  file.hpp  guest.hpp  host.hpp  kernel.cpp  kernel.hpp  package.cpp  package.hpp  request.cpp  request.hpp  response.cpp  response.hpp
macros/: repeat_until.hpp  scope_guard.hpp
